[B]1.5.5:[/B]
- contentprovider fixes (does not fail when item title starts with $, supports 
infolabels
[B]1.5.4:[/B]
- fixed koukni resolver to properly resolve rtmp
- removed providers - moved to plugins
[B]1.5.2:[/B]
- fixed youtube resolver
[B]1.5.1:[/B]
- when downloaded file does not have extension, it is autoappened (.mp4)
[B]1.5.0:[/B]
- added resolvers flashx, videomail (ivo, mx3L)
- resolvers can now return headers (if required for playing/downloading)
- ContentProviders can now raise ResolveException
- ulozto provider raises ResolveException when ulozto server is overloaded
[B]1.4.6:[/B]
- fixed youtube resolver
- subtitles now work in munkvideo resolver
[B]1.4.5:[/B]
- ulozto provider can now search for all file types
[B]1.4.4:[/B]
- added munkvideo resolver
[B]1.4.3:[/B]
- fixed eserial resolver to load subs correctly #136
[B]1.3.12:[/B]
- fixed eserial resolver to support subtitles and work for more streams
- fixed quality filtering: we always return exactly 1 stream unless user wants to select himself
[B]1.3.11:[/B]
- sledujuserialy resolver resolves mp4 videos as well
- fixed #127 - searching does not work on frodo beta1
- added eserialresolver
- resolvers have now priority (higher=resolver is asked fist)
[B]1.3.10:[/B]
- fixed #127 - searching does not work on frodo beta1
- fixed ulozto to show search results again
- fixed sledujuserialy resolver (to resolve mp4 videos)
[B]1.3.9:[/B]
- got rid of old resolver API
- fixed ulozto provider to be able to retrieve non-VIP files again
- hellspy provider has now configurable server url and supports http://stiahnito.sk (slovak mirror)
[B]1.3.8:[/B]
- resolver.findstreams - prevent multiple resolving same url
- added sledujuserialy resolver
[B]1.3.7:[/B]
- fixed vkontakte resolver
[B]1.3.6:[/B]
- fixed vkontakte resolver
[B]1.3.4:[/B]
- fixed youtube resolver
- added streamcloud & gosuparg resolvers (Ivo)
[B]1.3.3:[/B]
- ulozto and hellspy fixed: login() failed when called repeatedly
[B]1.3.2:[/B]