@@ -5,7 +5,7 @@
        provider-name="Libor Zoubek">
   <requires>
     <import addon="xbmc.python" version="2.0" />
-    <import addon="script.module.stream.resolver" version="1.5.4" />
+    <import addon="script.module.stream.resolver" version="1.5.6" />
   </requires>
   <extension point="xbmc.python.pluginsource"
              provides="video"
