@@ -1,3 +1,5 @@
+[B]1.5.6:[/B]
+- fixed koukni - works back with mp4
 [B]1.5.5:[/B]
 - contentprovider fixes (does not fail when item title starts with $, supports 
 infolabels
